--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.0.8
 backcall==0.2.0
 decorator==5.1.1
 Django==4.1.2
+django-crispy-forms==1.14.0
 executing==1.1.1
 ipython==8.5.0
 jedi==0.18.1
